name:                day18
version:             0.1.0.0
synopsis:            Advent of Code 2015 Day 18
description:         Please see README.md
homepage:            https://github.com/devonhollowood/adventofcode#readme
license:             MIT
license-file:        ../../LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2017 Devon Hollowood
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day18
  hs-source-dirs:      .
  main-is:             day18.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-missing-signatures
  build-depends:       base >= 4.7 && < 5,
                       array >= 0.5,
                       turtle >= 1.2,
                       megaparsec >= 5.0,
                       text >= 1.2