name:                day23
version:             0.1.0.0
synopsis:            Advent of Code 2015 Day 23
description:         Please see README.md
homepage:            https://github.com/devonhollowood/adventofcode#readme
license:             MIT
license-file:        ../../LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2017 Devon Hollowood
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable day23
  hs-source-dirs:      .
  main-is:             day23.hs
  default-language:    Haskell2010
  ghc-options:         -fno-warn-missing-signatures
  build-depends:       base >= 4.7 && < 5,
                       vector >= 0.11,
                       megaparsec >= 5.0,
                       text >= 1.2,
                       turtle >= 1.2
