name:                day08
version:             0.1.0.0
synopsis:            Advent of Code 2017 day 08
description:         Daily solution
homepage:            https://github.com/devonhollowood/adventofcode/2017/day08
license:             MIT
license-file:        ../../LICENSE
author:              Devon Hollowood
maintainer:          devonhollowood@gmail.com
copyright:           2017 Devon Hollowood
category:            Educational
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable day08
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       containers >= 0.5.7 && < 0.6,
                       megaparsec >= 5.3 && < 6.0,
                       optparse-applicative >= 0.13.2 && < 0.14,
                       text >= 1.2 && < 2.0
