[package]
name = "day07"
version = "0.1.0"
authors = ["Devon Hollowood <devonhollowood@google.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
structopt = "0.3"
intcode = { path = "../intcode", version = "0.3" }
